@@ -5,6 +5,9 @@ it actually occur in production.
 
 * Changed the log message "Could not find lifecycle-registered object for key..." to DEBUG.
 
+* Issue 43: Added a version of createStandardClasspathScanner() that takes additional
+annotations.
+
 1.0.4 - January 8, 2013
 =======================
 * WarmUps weren't being run for objects with no dependencies.
